# Minimal-Pop3-Smtp-Client

./: Cargo.toml  README.md  build.sh
src/: main.rs
