[package]
name = "pop_smtp"
version = "0.1.0"
authors = ["Neowutran <me@neowutran.ovh>"]
edition = "2018"
description = "Pop3 and Smtp client for QubesOS"
license = "GPL-3.0"
readme = "Readme.md"
repository = "https://github.com/neowutran/Minimal-Pop3-Smtp-Client"
keywords = ["pop3", "smtp"]
categories = ["executable"]

[dependencies]
openssl = { version = "0.10" }
docopt = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0"
regex = "1"
zeroize = "1"

